[project]
name = "linkedin-auto-poster"
version = "0.1.0"
description = "LinkedIn auto-poster with AI-generated drafts and one-click publishing"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "openai>=1.30.0",
    "Flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "APScheduler>=3.10.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=22.0.0",
    "flask-wtf>=1.1.0",
    "Flask-Limiter>=3.5.0",
    "Flask-Talisman>=1.1.0",
    "cryptography>=42.0.0",
    "prometheus-client>=0.20.0",
    "alembic>=1.13.0",
]

[tool.vercel]
entrypoint = "app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.coverage.run]
source = ["app", "config", "forms", "models", "linkedin_auth", "linkedin_poster", "content_generator", "inspiration", "scheduler", "security", "validation"]
omit = ["*/tests/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
